--- a/spec/index.html
+++ b/spec/index.html
@@ -17,7 +17,7 @@
         edDraftURI:           "https://w3c.github.io/sparql-federated-query/spec/",
         testSuiteURI:         "https://w3c.github.io/rdf-tests/",
         shortName:            "sparql12-federated-query",
-        copyrightStart:       "2008",
+        copyrightStart:       "2012",
          
         github:               "https://github.com/w3c/sparql-federated-query",
         wgPublicList:         "public-rdf-star-wg",
@@ -32,7 +32,8 @@
         previousMaturity:     "REC",
         
          editors: [
-           { name: "RDF Star Working Group" }
+           { name: "Ruben Taelman", w3cid: "84199"},
+           { name: "Gregory Williams", w3cid: "38870"},
          ],
         formerEditors: [
           { name: "Eric Prud'hommeaux" },
@@ -45,7 +46,7 @@
       };
     </script>
 
-    <style type="text/css">
+    <style>
       @import url("local.css");
 
       /* ReSpec */
@@ -103,10 +104,7 @@
       </p>
     </section>
 
-    <!--
-        @@ Includes too much - all RDF documents.
-    <section id="related" data-include="./common/related.html"></section>
-    -->
+    <section id="related" data-include="common/sparql-related.html"></section>
 
     <section id="sparql12-documents" class="introductory">
       <h2>SPARQL 1.2 Documents</h2>
