again... model, not format

--- a/spec/index.html
+++ b/spec/index.html
@@ -346,7 +346,7 @@ span.cancast:hover { background-color: #ffa;
   <body>
     <section id="abstract">
       <h2>Abstract</h2>
-<p>RDF is a directed, labeled graph data format for representing information in the Web. SPARQL can be used to express queries across diverse data sources, whether the data is stored natively as
+<p>RDF is a directed, labeled graph data model for representing information in the Web. SPARQL can be used to express queries across diverse data sources, whether the data is stored natively as
     RDF or viewed as RDF via middleware. This specification defines the syntax and semantics of SPARQL 1.1 Federated Query extension for executing queries distributed over different SPARQL endpoints.
     The <code>SERVICE</code> keyword extends SPARQL 1.1 to support queries that merge data distributed across the Web.</p>
     </section>
