Update participants, and mark specs as updatable.
See [resolution](https://www.w3.org/2024/04/04-rdf-star-minutes.html#r02).

For w3c/rdf-star-wg#113.

--- a/spec/index.html
+++ b/spec/index.html
@@ -351,7 +351,7 @@ span.cancast:hover { background-color: #ffa;
     The <code>SERVICE</code> keyword extends SPARQL 1.1 to support queries that merge data distributed across the Web.</p>
     </section>
 
-    <section id="sotd" class="introductory">
+    <section id="sotd" class="introductory updateable-rec">
       <p>
         This specification is published by the
         <a href="https://www.w3.org/groups/wg/rdf-star">RDF Star Working Group</a> as part of the
