Add changelog to track changes

--- a/spec/index.html
+++ b/spec/index.html
@@ -945,6 +945,13 @@ WHERE {
       <h2>CVS History (Last Call and after)</h2>
     </section>
     
+    <section id="changes-1-1" class="appendix informative">
+      <h2>Changes between SPARQL 1.1 Federated Query and SPARQL 1.2 Federated Query</h2>
+      <ul>
+        <li>Refer to RDF as a data model instead of data format in <a href="#abstract" class="sectionRef"></a></li>
+      </ul>
+    </section>
+    
 <!-- BODY -->
     <section id="privacy">
       <h2>Privacy Considerations</h2>
@@ -960,11 +967,6 @@ WHERE {
       <h2>Internationalization Considerations</h2>
       <p>TODO</p>                
     </section>
-
-    <section class="appendix informative" id="changes-from-sparql11">
-      <h2>Change Log</h2>
-      <p>TODO</p>
-    </section>   
 
     <section id="index"></section>
 
