--- a/spec/index.html
+++ b/spec/index.html
@@ -664,7 +664,7 @@ SELECT * {?s foaf:knows ?o } VALUES (?s) { (:a) (:b) }</pre>
           </table>
         </div>
 
-        <p>Both intermediary solution sequences can now be joined together, and projected to the requested variables to get to the expected two solution mappings:</p>
+        <p>Both intermediary solution sequences can now be joined together, and projected to the requested variables to get to the expected two solution mappings for the overall query:</p>
         <div class="result">
           <span class="doc-ref" id="table04c"></span>
           <table class="resultTable">
