--- a/spec/index.html
+++ b/spec/index.html
@@ -340,8 +340,8 @@ span.cancast:hover { background-color: #ffa;
     <section id="abstract">
       <h2>Abstract</h2>
 <p>RDF is a directed, labeled graph data model for representing information in the Web. SPARQL can be used to express queries across diverse data sources, whether the data is stored natively as
-    RDF or viewed as RDF via middleware. This specification defines the syntax and semantics of SPARQL 1.1 Federated Query extension for executing queries distributed over different SPARQL endpoints.
-    The <code>SERVICE</code> keyword extends SPARQL 1.1 to support queries that merge data distributed across the Web.</p>
+    RDF or viewed as RDF via middleware. This specification defines the syntax and semantics of SPARQL Federated Query extension for executing queries distributed over different SPARQL endpoints.
+    The <code>SERVICE</code> keyword extends SPARQL to support queries that merge data distributed across the Web.</p>
     </section>
 
     <section id="sotd" class="introductory updateable-rec">
@@ -358,17 +358,17 @@ span.cancast:hover { background-color: #ffa;
     <section id="introduction">
       <h2>Introduction</h2>
       <p>The growing number of SPARQL query services offer data consumers an opportunity to merge data distributed across the Web. This specification defines the syntax and semantics of the
-      <code>SERVICE</code> extension to the SPARQL 1.1 Query Language. This extension allows a query author to direct a portion of a query to a particular SPARQL endpoint. Results are returned to the
+      <code>SERVICE</code> extension to the SPARQL Query Language. This extension allows a query author to direct a portion of a query to a particular SPARQL endpoint. Results are returned to the
       federated query processor and are combined with results from the rest of the query.</p>
       <section id="docConventions">
         <h3>Document Conventions</h3>
         <section id="docNamespaces">
           <h4>Namespaces</h4>
-          <p>This document uses the same namespaces as from the <a class="inform" href="http://www.w3.org/TR/2011/WD-sparql11-query-20110512/#docNamespaces">SPARQL 1.1 Query document</a>.</p>
+          <p>This document uses the same namespaces as from the [[[SPARQL12-QUERY]]].</p>
         </section>
         <section id="docResultDesc">
           <h4>Result Descriptions</h4>
-          <p>Result sets are illustrated in tabular form as in the <a class="inform" href="http://www.w3.org/TR/2011/WD-sparql11-query-20110512/#docResultDesc">SPARQL 1.1 Query document</a>.</p>
+          <p>Result sets are illustrated in tabular form as in the [[[SPARQL12-QUERY]]].</p>
           <div class="result">
             <span class="doc-ref" id="table39"></span>
             <table class="resultTable">
@@ -386,25 +386,25 @@ span.cancast:hover { background-color: #ffa;
               </tbody>
             </table>
           </div>
-          <p>A 'binding' is a pair (<a href="http://www.w3.org/TR/sparql11-query/#defn_QueryVariable">variable</a>, <a href="http://www.w3.org/TR/sparql11-query/#defn_RDFTerm">RDF term</a>). There
+          <p>A 'binding' is a pair (<a data-cite="SPARQL12-QUERY#defn_QueryVariable">variable</a>, <a data-cite="SPARQL12-QUERY#defn_RDFTerm">RDF term</a>). There
           are three variables: <code>x</code>, <code>y</code> and <code>z</code> (shown as column headers). Each solution is shown as one row in the body of the table.&nbsp; Here, there is a single
           solution, in which variable <code>x</code> is bound to <code>"Alice"</code>, variable <code>y</code> is bound to <code>http://example/a</code>, and variable <code>z</code> is not bound to
           an RDF term. Variables are not required to be bound in a solution.</p>
         </section>
         <section id="docTerminology">
           <h4>Terminology</h4>
-          <p>The following terms are defined in <a class="norm" href="http://www.w3.org/TR/sparql11-query/">SPARQL 1.1 Query Language</a> <a href="#SQRY">[SQRY]</a> and reused in this document:</p>
+          <p>The following terms are defined in [[[SPARQL12-QUERY]]] and reused in this document:</p>
           <ul>
-            <li><a class="type IRI" href="http://www.w3.org/TR/2004/REC-rdf-concepts-20040210/#dfn-URI-reference">IRI</a> (corresponds to the Concepts and Abstract Syntax term <code>RDF URI
+            <li><a class="type IRI" data-cite="RDF12-CONCEPTS#dfn-iri-reference">IRI</a> (corresponds to the Concepts and Abstract Syntax term <code>RDF URI
             reference</code>)</li>
-            <li><a class="type SolutionMapping" href="http://www.w3.org/TR/sparql11-query/#defn_sparqlSolutionMapping">Solution Mapping</a></li>
-            <li><a class="type SolutionSequence" href="http://www.w3.org/TR/sparql11-query/#defn_sparqlSolutionSequence">Solution Sequence</a></li>
+            <li><a class="type SolutionMapping" data-cite="SPARQL12-QUERY#defn_sparqlSolutionMapping">Solution Mapping</a></li>
+            <li><a class="type SolutionSequence" data-cite="SPARQL12-QUERY#defn_sparqlSolutionSequence">Solution Sequence</a></li>
           </ul>
         </section>
       </section>
     </section>
     <section id="service">
-      <h2>SPARQL 1.1 Federated Query Extension</h2>
+      <h2>SPARQL Federated Query Extension</h2>
       <p>The <code>SERVICE</code> keyword instructs a federated query processor to invoke a portion of a SPARQL query against a remote SPARQL endpoint. This section presents examples of how to use
       the <code>SERVICE</code> keyword. The following sections define the syntax and semantics of this extension.</p>
       <section id="simpleService">
@@ -560,8 +560,8 @@ WHERE
       </section>
       <section id="values">
         <h3>Interplay of SERVICE and VALUES (Informative)</h3>
-        <p>SPARQL 1.1 Query includes the <code>VALUES</code> clause (<a class="inform" href="http://www.w3.org/TR/sparql11-query/#inline-data">VALUES</a>), which can be used to provide an unordered
-        solution sequence that is joined with the results of the query evaluation. Implementers of SPARQL 1.1 Federated Query may use the <code>VALUES</code> clause to constrain the results received
+        <p>SPARQL Query includes the <code>VALUES</code> clause (<a class="inform" data-cite="SPARQL12-QUERY#inline-data">VALUES</a>), which can be used to provide an unordered
+        solution sequence that is joined with the results of the query evaluation. Implementers of SPARQL Federated Query may use the <code>VALUES</code> clause to constrain the results received
         from a remote endpoint based on solution bindings from evaluating other parts of the query.</p>
         <p>The following example shows how <code>SERVICE</code> and <code>VALUES</code> can work together. Suppose a query that asks for all instances of foaf:Person in the default graph and also
         their known people in the remote endpoint <code>http://example.org/sparql</code>:</p>
@@ -586,8 +586,8 @@ WHERE
   :a  foaf:knows     :b . 
   :b  foaf:knows     :c .
   :c  foaf:knows     :a .
-  :a  foaf:interest  "SPARQL 1.1 Basic Federated Query" . 
-  :b  foaf:interest  "SPARQL 1.1 Query" .
+  :a  foaf:interest  "SPARQL Basic Federated Query" . 
+  :b  foaf:interest  "SPARQL Query" .
   :c  foaf:interest  "RDB2RDF Direct mapping" .
   </pre>
           <p>Query:</p>
@@ -677,16 +677,14 @@ SELECT * {?s foaf:knows ?o } VALUES (?s) { (:a) (:b) }</pre>
       </section>
     </section>
     <section id="fedSemantics">
-      <h2>SPARQL 1.1 Simple Federation Extension: semantics</h2>
+      <h2>SPARQL Simple Federation Extension: semantics</h2>
       <section id="defn_service">
         <h3>Translation to the SPARQL Algebra</h3>
-        <p>The <code>SERVICE</code> extension is defined as an additional type of GroupGraphPattern, with an accompanying addition to SPARQL Query 1.1's <a href=
-        "http://www.w3.org/TR/sparql11-query/#convertGraphPattern">Transform (syntax form)</a>:</p>
+        <p>The <code>SERVICE</code> extension is defined as an additional type of GroupGraphPattern, with an accompanying addition to SPARQL Query's <a data-cite="SPARQL12-QUERY#convertGraphPattern">Transform (syntax form)</a>:</p>
         <blockquote>
-          <p>If the form is <code><a href="http://www.w3.org/TR/sparql11-query/#rGroupGraphPattern">GroupGraphPattern</a></code></p>
+          <p>If the form is <code><a data-cite="SPARQL12-QUERY#rGroupGraphPattern">GroupGraphPattern</a></code></p>
           <blockquote>
-            <p>From the <a href="http://www.w3.org/TR/sparql11-query/#sparqlTranslateGraphPatterns">Translate Graph Patterns section</a> of [<a class="inform" href=
-            "http://www.w3.org/TR/sparql11-query/">SPARQL 1.1 Query Language</a>] we extend the transformation of GroupGraphPattern to define the transformation of <code>SERVICE</code> patterns:</p>
+            <p>From the <a data-cite="SPARQL12-QUERY#sparqlTranslateGraphPatterns">Translate Graph Patterns section</a> of [[[SPARQL12-QUERY]]] we extend the transformation of GroupGraphPattern to define the transformation of <code>SERVICE</code> patterns:</p>
           </blockquote>
         </blockquote>
         <pre class="codeBlock">Let FS := the empty set
@@ -734,9 +732,9 @@ The result is G.
             </pre>
       </section>
       <section id="algebra_service">
-        <h3>SPARQL 1.1 Simple Federation Extension Algebra</h3>
-        <p>The evaluation of <code>SERVICE</code> is defined in terms of the <a class="inform" href="http://www.w3.org/TR/rdf-sparql-XMLres/">SPARQL Results</a> [<a href="#RESULTS">RESULTS</a>]
-        returned by a SPARQL Protocol [<a href="#SPROT">SPROT</a>] execution of the nested graph pattern:</p>
+        <h3>SPARQL Simple Federation Extension Algebra</h3>
+        <p>The evaluation of <code>SERVICE</code> is defined in terms of the [[[SPARQL12-RESULTS-XML]]]
+        returned by a [[[SPARQL12-PROTOCOL]]] execution of the nested graph pattern:</p>
         <div class="defn">
           <p><strong>Definition: <span class="doc-ref" id="defn_evalService">Evaluation of a Service Pattern</span></strong></p>Let
           <ul>
@@ -867,82 +865,29 @@ WHERE {
       <p>Once <code>?service</code> has been evaluated it is possible to execute <code>SERVICE</code> for each value of <code>?service</code>:</p>
       <pre class="query">SERVICE ?service {
 ?project doap:name ?projectName . }</pre>
-      <p>Note that blank nodes are unique to any document which serializes them. Also, <code>SERVICE</code> calls depend on the SPARQL Protocol [<a href="#SPROT">SPROT</a>] which transfers serialized
+      <p>Note that blank nodes are unique to any document which serializes them. Also, <code>SERVICE</code> calls depend on the [[[SPARQL12-PROTOCOL]]] which transfers serialized
       RDF documents making blank nodes unique between service calls.</p>
     </section>
     <section id="conformance">
       <h2>Conformance</h2>
-      <p>See section 4 <a href="http://www.w3.org/TR/sparql11-query/#grammar">SPARQL 1.1 Federated Query Grammar</a> regarding conformance of <a href=
-      "http://www.w3.org/TR/sparql11-query/#defn_SPARQLQueryString">SPARQL Query strings</a> that include the SPARQL 1.1 Federated Query Extensions. See section 3.1 <a href="#defn_service">Definition
+      <p>See section 4 <a data-cite="SPARQL12-QUERY#grammar">SPARQL Federated Query Grammar</a> regarding conformance of <a data-cite="SPARQL12-QUERY#defn_SPARQLQueryString">SPARQL Query strings</a> that include the SPARQL Federated Query Extensions. See section 3.1 <a href="#defn_service">Definition
       of SERVICE</a> for conformance of query results for the <code>SERVICE</code> keyword.</p>
-      <p>This specification is intended for use in conjunction with the <a href="http://www.w3.org/TR/sparql11-query/">SPARQL 1.1 Query Language</a>. See that specification for its conformance
+      <p>This specification is intended for use in conjunction with the [[[SPARQL12-QUERY]]]. See that specification for its conformance
       criteria.</p>
     </section>
-    <section id="security-original">
+    <section id="security">
       <h2>Security Considerations</h2>
       <p>SPARQL queries using <code>SERVICE</code> imply that a URI will be dereferenced, and that the result will be incorporated into a working data set. All of the security issues of <a class=
-      "norm" href="http://www.w3.org/TR/sparql11-protocol/#policy-security">SPARQL Protocol 1.1</a> [<a href="#SPROT">SPROT</a>] Section 3.1 <a class="norm" href=
-      "http://www.w3.org/TR/sparql11-query/#security-original">SPARQL 1.1 Query</a> [<a href="#SQRY">SQRY</a>] Section 21, and <a class="norm" href="http://www.ietf.org/rfc/rfc3986.txt">Uniform Resource
-      Identifier (URI): Generic Syntax</a> [<a href="#rfc3986">RFC3986</a>] Section 7 should be considered.</p>
+      "norm" data-cite="SPARQL12-QUERY#policy-security">SPARQL Protocol</a> Section 3.1 <a class="norm" data-cite="SPARQL12-QUERY#security-original">SPARQL Query</a> Section 21, and <a data-cite="rfc3986#" class="norm">Uniform Resource
+      Identifier (URI): Generic Syntax</a> Section 7 should be considered.</p>
     </section>
-    <section id="sec-bibliography">
-      <h2>References</h2>
-      <section id="sec-normative-refs">
-        <h3>Normative References</h3>
-        <dl class="bib">
-          <dt><span class="doc-ref" id="SQRY">[SQRY]</span></dt>
-          <dd><cite><a href="http://www.w3.org/TR/2013/REC-sparql11-query-20130321">SPARQL 1.1 Query Language</a></cite>, S. Harris, A. Seaborne, Editors, W3C Recommendation, 21 March 2013,
-          http://www.w3.org/TR/2013/REC-sparql11-query-20130321. <a href="http://www.w3.org/TR/sparql11-query/" title="Latest version of SPARQL 1.1 Query Language">Latest version</a> available at
-          http://www.w3.org/TR/sparql11-query.</dd>
-          <dt><span class="doc-ref" id="SPROT">[SPROT]</span></dt>
-          <dd><cite><a href="http://www.w3.org/TR/2013/REC-sparql11-protocol-20130321">SPARQL 1.1 Protocol</a></cite>, L. Feigenbaum, G. Williams, K. Clark, E. Torres, Editors, W3C Recommendation, 21
-          March 2013, http://www.w3.org/TR/2013/REC-sparql11-protocol-20130321. <a href="http://www.w3.org/TR/sparql11-protocol/" title="Latest version of SPARQL 1.1 Protocol">Latest version</a>
-          available at http://www.w3.org/TR/sparql11-protocol.</dd>
-          <dt><span class="doc-ref" id="CHARMOD">[CHARMOD]</span></dt>
-          <dd>Character Model for the World Wide Web 1.0: Fundamentals, R. Ishida, F. Yergeau, M. J. Düst, M. Wolf, T. Texin, Editors, W3C Recommendation, 15 February 2005,
-          http://www.w3.org/TR/2005/REC-charmod-20050215/ . <a href="http://www.w3.org/TR/charmod/" title="Latest version of Character Model for the World Wide Web 1.0: Fundamentals">Latest
-          version</a> available at http://www.w3.org/TR/charmod/ .</dd>
-          <dt><span class="doc-ref" id="rfc3629">[RFC3629]</span></dt>
-          <dd>RFC 3629 UTF-8, a transformation format of ISO 10646, F. Yergeau November 2003</dd>
-          <dt><span class="doc-ref" id="rfc3986">[RFC3986]</span></dt>
-          <dd>RFC 3986 Uniform Resource Identifier (URI): Generic Syntax, T. Berners-Lee, R. Fielding, L. Masinter January 2005</dd>
-          <dt><span class="doc-ref" id="rfc3987">[RFC3987]</span></dt>
-          <dd><a href="http://www.ietf.org/rfc/rfc3987.txt">RFC 3987</a>, "Internationalized Resource Identifiers (IRIs)", M. Dürst , M. Suignard</dd>
-          <dt><span class="doc-ref" id="UNICODE">[UNICODE]</span></dt>
-          <dd>The Unicode Standard, Version 4. ISBN 0-321-18578-1, as updated from time to time by the publication of new versions. The latest version of Unicode and additional information on
-          versions of the standard and of the Unicode Character Database is available at <a href=
-          "http://www.unicode.org/unicode/standard/versions/">http://www.unicode.org/unicode/standard/versions/</a>.</dd>
-          <dt><span class="doc-ref" id="XML11">[XML11]</span></dt>
-          <dd>Extensible Markup Language (XML) 1.1, J. Cowan, J. Paoli, E. Maler, C. M. Sperberg-McQueen, F. Yergeau, T. Bray, Editors, W3C Recommendation, 4 February 2004,
-          http://www.w3.org/TR/2004/REC-xml11-20040204/ . <a href="http://www.w3.org/TR/xml11/" title="Latest version of Extensible Markup Language (XML) 1.1">Latest version</a> available at
-          http://www.w3.org/TR/xml11/ .</dd>
-          <dt><span class="doc-ref" id="BCP47">[BCP47]</span></dt>
-          <dd>Best Common Practice 47, P. V. Biron, A. Malhotra, Editors, W3C Recommendation, 28 October 2004, http://www.rfc-editor.org/rfc/bcp/bcp47.txt .</dd>
-        </dl>
-      </section>
-      <section id="sec-non-normative-refs">
-        <h3>Other References</h3>
-        <dl class="bib">
-          <dt><span class="doc-ref" id="RESULTS">[RESULTS]</span></dt>
-          <dd><cite><a href="http://www.w3.org/TR/2013/REC-rdf-sparql-XMLres-20130321">SPARQL Query Results XML Format (Second Edition)</a></cite>, D. Beckett, J. Broekstra, Editors, W3C
-          Recommendation, 21 March 2013, http://www.w3.org/TR/2013/REC-rdf-sparql-XMLres-20130321. <a href="http://www.w3.org/TR/rdf-sparql-XMLres/" title=
-          "Latest version of SPARQL Query Results XML Format (Second Edition)">Latest version</a> available at http://www.w3.org/TR/rdf-sparql-XMLres.</dd>
-          <dt><span class="doc-ref" id="TURTLE">[TURTLE]</span></dt>
-          <dd><cite><a href="http://www.w3.org/TR/2013/CR-turtle-20130219/">Turtle: Terse RDF Triple Language</a></cite>, E Prud'hommeaux, G Carothers, Editors, W3C Candidate Recommendation, 19
-          February 2013, http://www.w3.org/TR/2013/CR-turtle-20130219/. <a href="http://www.w3.org/TR/turtle/" title="Latest version of Turtle">Latest version</a> available at
-          http://www.w3.org/TR/turtle/.</dd>
-        </dl>
-      </section>
-    </section>
+
     <section id="sec-acknowledgements">
       <h2>Acknowledgements</h2>
-      <p>The SPARQL 1.1 Federated Query document is a product of the whole of the <a href="http://www.w3.org/2009/sparql/wiki/Main_Page">W3C SPARQL Working Group</a>, and our thanks for discussions,
+      <p>The SPARQL Federated Query document is a product of the whole of the <a href="http://www.w3.org/2009/sparql/wiki/Main_Page">W3C SPARQL Working Group</a>, and our thanks for discussions,
       comments and reviews go to all present and past members.</p>
       <p>In addition, we have had comments and discussions with many people through the working group comments list. All comments go to making a better document. Carlos would also like to
       particularly thank Jorge Pérez, Oscar Corcho and Marcelo Arenas for their discussions on the syntax and semantics of the Federated query extension.</p>
-    </section>
-    <section id="sec-cvsLog">
-      <h2>CVS History (Last Call and after)</h2>
     </section>
     
     <section id="changes-1-1" class="appendix informative">
@@ -950,17 +895,13 @@ WHERE {
       <ul>
         <li>Refer to RDF as a data model instead of data format in <a href="#abstract" class="sectionRef"></a></li>
         <li><a href="https://www.w3.org/2013/sparql-errata#errata-fq-1">errata-fq-1</a>: Incorrect example in <a href="#values">interplay of SERVICE and VALUES example</a></li>
+		<li>Update mentions on SPARQL and RDF 1.1 to 1.2.</li>
       </ul>
     </section>
     
 <!-- BODY -->
     <section id="privacy">
       <h2>Privacy Considerations</h2>
-      <p>TODO</p>
-    </section>
-
-    <section id="security">
-      <h2>Security Considerations</h2>
       <p>TODO</p>
     </section>
 
