--- a/spec/index.html
+++ b/spec/index.html
@@ -733,7 +733,7 @@ The result is G.
       </section>
       <section id="algebra_service">
         <h3>SPARQL Simple Federation Extension Algebra</h3>
-        <p>The evaluation of <code>SERVICE</code> is defined in terms of the [[[SPARQL12-RESULTS-XML]]]
+        <p>The evaluation of <code>SERVICE</code> is defined in terms of the [[[?SPARQL12-RESULTS-XML]]]
         returned by a [[[SPARQL12-PROTOCOL]]] execution of the nested graph pattern:</p>
         <div class="defn">
           <p><strong>Definition: <span class="doc-ref" id="defn_evalService">Evaluation of a Service Pattern</span></strong></p>Let
