--- a/spec/index.html
+++ b/spec/index.html
@@ -364,7 +364,7 @@ span.cancast:hover { background-color: #ffa;
         <h3>Document Conventions</h3>
         <section id="docNamespaces">
           <h4>Namespaces</h4>
-          <p>This document uses the same namespaces as from the [[[SPARQL12-QUERY]]].</p>
+          <p>This document uses the same namespaces as from [[[SPARQL12-QUERY]]].</p>
         </section>
         <section id="docResultDesc">
           <h4>Result Descriptions</h4>
