--- a/spec/index.html
+++ b/spec/index.html
@@ -368,7 +368,7 @@ span.cancast:hover { background-color: #ffa;
         </section>
         <section id="docResultDesc">
           <h4>Result Descriptions</h4>
-          <p>Result sets are illustrated in tabular form as in the [[[SPARQL12-QUERY]]].</p>
+          <p>Result sets are illustrated in tabular form as in [[[SPARQL12-QUERY]]].</p>
           <div class="result">
             <span class="doc-ref" id="table39"></span>
             <table class="resultTable">
