--- a/spec/index.html
+++ b/spec/index.html
@@ -387,7 +387,7 @@ span.cancast:hover { background-color: #ffa;
             </table>
           </div>
           <p>A 'binding' is a pair (<a data-cite="SPARQL12-QUERY#defn_QueryVariable">variable</a>, <a data-cite="SPARQL12-QUERY#defn_RDFTerm">RDF term</a>). There
-          are three variables: <code>x</code>, <code>y</code> and <code>z</code> (shown as column headers). Each solution is shown as one row in the body of the table.&nbsp; Here, there is a single
+          are three variables: <code>x</code>, <code>y</code>, and <code>z</code> (shown as column headers). Each solution is shown as one row in the body of the table. Here, there is a single
           solution, in which variable <code>x</code> is bound to <code>"Alice"</code>, variable <code>y</code> is bound to <code>http://example/a</code>, and variable <code>z</code> is not bound to
           an RDF term. Variables are not required to be bound in a solution.</p>
         </section>
