--- a/spec/index.html
+++ b/spec/index.html
@@ -885,7 +885,7 @@ WHERE {
     <section id="sec-acknowledgements">
       <h2>Acknowledgements</h2>
       <p>The SPARQL Federated Query document is a product of the whole of the <a href="http://www.w3.org/2009/sparql/wiki/Main_Page">W3C SPARQL Working Group</a>, and our thanks for discussions,
-      comments and reviews go to all present and past members.</p>
+      comments, and reviews go to all present and past members.</p>
       <p>In addition, we have had comments and discussions with many people through the working group comments list. All comments go to making a better document. Carlos would also like to
       particularly thank Jorge Pérez, Oscar Corcho and Marcelo Arenas for their discussions on the syntax and semantics of the Federated query extension.</p>
     </section>
