--- a/spec/index.html
+++ b/spec/index.html
@@ -887,7 +887,7 @@ WHERE {
       <p>The SPARQL Federated Query document is a product of the whole of the <a href="http://www.w3.org/2009/sparql/wiki/Main_Page">W3C SPARQL Working Group</a>, and our thanks for discussions,
       comments, and reviews go to all present and past members.</p>
       <p>In addition, we have had comments and discussions with many people through the working group comments list. All comments go to making a better document. Carlos would also like to
-      particularly thank Jorge Pérez, Oscar Corcho and Marcelo Arenas for their discussions on the syntax and semantics of the Federated query extension.</p>
+      particularly thank Jorge Pérez, Oscar Corcho, and Marcelo Arenas for their discussions on the syntax and semantics of the Federated Query extension.</p>
     </section>
     
     <section id="changes-1-1" class="appendix informative">
