--- a/spec/index.html
+++ b/spec/index.html
@@ -878,7 +878,7 @@ WHERE {
     <section id="security">
       <h2>Security Considerations</h2>
       <p>SPARQL queries using <code>SERVICE</code> imply that a URI will be dereferenced, and that the result will be incorporated into a working data set. All of the security issues of <a class=
-      "norm" data-cite="SPARQL12-QUERY#policy-security">SPARQL Protocol</a> Section 3.1 <a class="norm" data-cite="SPARQL12-QUERY#security-original">SPARQL Query</a> Section 21, and <a data-cite="rfc3986#" class="norm">Uniform Resource
+      "norm" data-cite="SPARQL12-QUERY#policy-security">SPARQL Protocol</a>, <a class="norm" data-cite="SPARQL12-QUERY#security-original">SPARQL Query</a>, and <a data-cite="rfc3986#" class="norm">Uniform Resource
       Identifier (URI): Generic Syntax</a> Section 7 should be considered.</p>
     </section>
 
